<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/curve_toolbar_bg">
    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/view"
        android:layout_below="@+id/toolbar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:fontFamily="cursive"
        android:textSize="40sp"
        android:id="@+id/logintxtview"
        android:gravity="center"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shapeemail"
        android:padding="15dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:id="@+id/editname"
            android:singleLine="true"
            android:background="@drawable/shapeemail"
            android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/employee_code"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:inputType="text"
            android:importantForAutofill="no"
            android:drawableStart="@drawable/ic_perm_identity_black_24dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:singleLine="true"
            android:id="@+id/password"
            android:background="@drawable/shapeemail"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:id="@+id/checkin"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"
                android:textColor="@android:color/black"
                android:buttonTint="@android:color/black"
                android:checked="false"
                tools:targetApi="lollipop" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:id="@+id/forgetpassword"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"
                android:textColor="@android:color/black"
                android:drawablePadding="6dp"
                android:padding="4dp"
                app:drawableLeftCompat="@drawable/ic_baseline_lock_24" />
        </LinearLayout>
        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:id="@+id/login"
            android:layout_gravity="end"
            android:textColor="@android:color/white"
            android:shadowColor="@android:color/transparent"
            android:padding="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/shapelogin"/>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/registered"
            android:text="@string/if_not_registered"
            android:textColor="@android:color/holo_red_dark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/Signup"
            android:layout_margin="5dp"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/signup"/>
    </LinearLayout>

    </LinearLayout>



</RelativeLayout>
