<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/backgroundimg"
    tools:context=".activity.SignupActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/curve_toolbar_bg">
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/tv"
        android:text="@string/r_e_g_i_s_t_e_r"
        android:textColor="@android:color/black"/>
        <ScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shapesignup"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:backgroundTint="@android:color/white"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/employee_code"
                        app:boxBackgroundMode="none"
                        android:inputType="text"
                        android:maxLines="1"
                        android:backgroundTint="@android:color/white"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:backgroundTint="@android:color/white"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutemailid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextemailid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:backgroundTint="@android:color/white"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextMobileno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:backgroundTint="@android:color/white"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutDesgination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextDesgination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/desgination"
                        android:inputType="text"
                        android:maxLines="1"
                        android:backgroundTint="@android:color/white"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:id="@+id/register"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:shadowColor="@android:color/transparent"
                    android:padding="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shapelogin"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_member_login"
                    android:id="@+id/Loginpage"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/holo_red_dark"
                    android:shadowColor="@android:color/transparent"
                    android:padding="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp" />

            </LinearLayout>
    </ScrollView>

</LinearLayout>